inventory/text/java/InventoryParser.java
// Generated from java/Inventory.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class InventoryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, SK=85, ANYTHING=86;
	public static final int
		RULE_student_tok = 0, RULE_nuid_tok = 1, RULE_college_tok = 2, RULE_ap_tok = 3, 
		RULE_ib_tok = 4, RULE_trde_tok = 5, RULE_math_tok = 6, RULE_unl_tok = 7, 
		RULE_eof = 8, RULE_inventory = 9, RULE_ace = 10, RULE_ace_head = 11, RULE_survey = 12, 
		RULE_survey_response = 13, RULE_likert_question = 14, RULE_likert_answer = 15, 
		RULE_free_question = 16, RULE_free_answer = 17, RULE_student = 18, RULE_nuid = 19, 
		RULE_collegemajor = 20, RULE_ap = 21, RULE_ib = 22, RULE_trde = 23, RULE_math = 24, 
		RULE_unl = 25, RULE_likert_agree = 26, RULE_likert_conce = 27, RULE_very_strong_agree = 28, 
		RULE_strong_agree = 29, RULE_neutral_agree = 30, RULE_weak_agree = 31, 
		RULE_very_weak_agree = 32, RULE_very_strong_conce = 33, RULE_strong_conce = 34, 
		RULE_neutral_conce = 35, RULE_weak_conce = 36, RULE_very_weak_conce = 37, 
		RULE_txt = 38;
	public static final String[] ruleNames = {
		"student_tok", "nuid_tok", "college_tok", "ap_tok", "ib_tok", "trde_tok", 
		"math_tok", "unl_tok", "eof", "inventory", "ace", "ace_head", "survey", 
		"survey_response", "likert_question", "likert_answer", "free_question", 
		"free_answer", "student", "nuid", "collegemajor", "ap", "ib", "trde", 
		"math", "unl", "likert_agree", "likert_conce", "very_strong_agree", "strong_agree", 
		"neutral_agree", "weak_agree", "very_weak_agree", "very_strong_conce", 
		"strong_conce", "neutral_conce", "weak_conce", "very_weak_conce", "txt"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'      Student:'", "'         NUID:'", "'College/Major:'", "'Advanced Placement '", 
		"'International Baccalaureate '", "'Transfer and Dual Enrollment'", "'Math Courses'", 
		"'UNL Courses'", "'ACE Outcomes'", "'\n'", "'No values entered'", "'     ACE 1 Writing'", 
		"'     ACE 2 Communication Competence'", "'     ACE 3 Math/Stat/Reasoning'", 
		"'     ACE 4 Science'", "'     ACE 5 Humanities'", "'     ACE 6 Social Science'", 
		"'     ACE 7 Arts'", "'     ACE 8 Civic/Ethics/Stewardship'", "'     ACE 9 Global/Diversity'", 
		"'     ACE 10 Integrated Product'", "'         15 Knowing how to study'", 
		"'         16 Making Friends'", "'         17 Being in a large environment'", 
		"'         18 Paying for college'", "'         19 Doing well in my classes'", 
		"'         20 Being away from family'", "'         21 Finding help if I need it'", 
		"'         22 Making the right major/career decision'", "'         23 Managing my time'", 
		"'         29 New ideas and projects sometimes distract me from previous ones.'", 
		"'         30 Setbacks don't discourage me. '", "'         31 I have been obsessed with a certain idea or project for a short time but later lost interest.'", 
		"'         32 I am a hard worker.'", "'         33 I often set a goal but later choose to pursue a different one.'", 
		"'         34 I have difficulty maintaining my focus on projects that take more than a few months to complete.'", 
		"'         35 I finish whatever I begin.'", "'         36 I am diligent.'", 
		"'         39 My academic performance is important to me.'", "'         40 I set goals for the grades I want in my classes.'", 
		"'         41 It is important for me to do as well as I can in my courses.'", 
		"'         42 I find it difficult to motivate myself to study for my courses.'", 
		"'         43 I study just what I need to know to pass.'", "'         46 I usually start an assignment shortly after it is assigned.'", 
		"'         47 When I have a deadline, I often waste time doing other things.'", 
		"'         48 I usually plan out my week's work in advance.'", "'         49 I find it hard to stick to my study schedule.'", 
		"'         50 I schedule more time to study for difficult classes.'", 
		"'         51 I know how to manage my time.'", "'         54 I know how to study for tests.'", 
		"'         55 I know how to study well.'", "'         56 I will develop a strong plan for academic success.'", 
		"'         57 Academically, I am very self-disciplined.'", "'         58 I will handle any academic issues I might encounter.'", 
		"'         59 UNL was my first choice.'", "'         2 I plan to live'", 
		"'         3 My first term, I plan to work on campus this many hours:'", 
		"'         4 My first term, I plan to work off campus this many hours:'", 
		"'         5 I am interested in one of the Pre-professional areas:'", 
		"'         6 My strongest subjects are (select all that apply):'", "'         7 My most difficult subjects are (select all that apply): '", 
		"'         8 The average number of hours I spent in high school studying outside of class time:'", 
		"'         9 The amount of time I plan to study outside of class time in college:'", 
		"'         10 Number of activities I plan to be involved in at UNL:'", 
		"'         11 Activities in which I plan to participate during my first year that may impactt my planning:'", 
		"'         12 My parents earned a Bachelor's Degree.'", "'         24 Do you plan to take coursework in a modern/classical (i.e., non-English) language?'", 
		"'         25 Briefly describe your career interests:'", "'         26 Majors of Interest:'", 
		"'             Strongly Agree'", "'             Very much like me'", "'             Agree'", 
		"'             Mostly like me'", "'             Neutral'", "'             Somewhat like me'", 
		"'             Disagree'", "'             Not much like me'", "'             Strongly Disagree'", 
		"'             Not like me at all'", "'             Extremely Concerned'", 
		"'             Moderately Concerned'", "'             Somewhat Concerned'", 
		"'             Slightly Concerned'", "'             Not Concerned'", "'\r'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "SK", "ANYTHING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Inventory.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	double[] theta = { 0,0.1848,0.3696,0.5544,0.7392,0.924,1.1088,1.2936,1.4784,1.6632,1.848,2.0328,2.2176,2.4024,2.5872,2.772,2.9568,3.1416,3.3264,3.5112,3.696,3.8808,4.0656,4.2504,4.4352,4.62,4.8048,4.9896,5.1744,5.3592,5.544,5.7288,5.9136,6.0984 };
	double[] rho = new double[34];
	int count = 0;

	public InventoryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Student_tokContext extends ParserRuleContext {
		public Student_tokContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_student_tok; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterStudent_tok(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitStudent_tok(this);
		}
	}

	public final Student_tokContext student_tok() throws RecognitionException {
		Student_tokContext _localctx = new Student_tokContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_student_tok);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nuid_tokContext extends ParserRuleContext {
		public Nuid_tokContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nuid_tok; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterNuid_tok(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitNuid_tok(this);
		}
	}

	public final Nuid_tokContext nuid_tok() throws RecognitionException {
		Nuid_tokContext _localctx = new Nuid_tokContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_nuid_tok);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class College_tokContext extends ParserRuleContext {
		public College_tokContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_college_tok; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterCollege_tok(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitCollege_tok(this);
		}
	}

	public final College_tokContext college_tok() throws RecognitionException {
		College_tokContext _localctx = new College_tokContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_college_tok);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ap_tokContext extends ParserRuleContext {
		public Ap_tokContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ap_tok; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterAp_tok(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitAp_tok(this);
		}
	}

	public final Ap_tokContext ap_tok() throws RecognitionException {
		Ap_tokContext _localctx = new Ap_tokContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ap_tok);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ib_tokContext extends ParserRuleContext {
		public Ib_tokContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ib_tok; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterIb_tok(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitIb_tok(this);
		}
	}

	public final Ib_tokContext ib_tok() throws RecognitionException {
		Ib_tokContext _localctx = new Ib_tokContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ib_tok);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Trde_tokContext extends ParserRuleContext {
		public Trde_tokContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trde_tok; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterTrde_tok(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitTrde_tok(this);
		}
	}

	public final Trde_tokContext trde_tok() throws RecognitionException {
		Trde_tokContext _localctx = new Trde_tokContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_trde_tok);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Math_tokContext extends ParserRuleContext {
		public Math_tokContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_math_tok; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterMath_tok(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitMath_tok(this);
		}
	}

	public final Math_tokContext math_tok() throws RecognitionException {
		Math_tokContext _localctx = new Math_tokContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_math_tok);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Unl_tokContext extends ParserRuleContext {
		public Unl_tokContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unl_tok; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterUnl_tok(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitUnl_tok(this);
		}
	}

	public final Unl_tokContext unl_tok() throws RecognitionException {
		Unl_tokContext _localctx = new Unl_tokContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_unl_tok);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EofContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(InventoryParser.EOF, 0); }
		public EofContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eof; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterEof(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitEof(this);
		}
	}

	public final EofContext eof() throws RecognitionException {
		EofContext _localctx = new EofContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_eof);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InventoryContext extends ParserRuleContext {
		public StudentContext student() {
			return getRuleContext(StudentContext.class,0);
		}
		public NuidContext nuid() {
			return getRuleContext(NuidContext.class,0);
		}
		public CollegemajorContext collegemajor() {
			return getRuleContext(CollegemajorContext.class,0);
		}
		public ApContext ap() {
			return getRuleContext(ApContext.class,0);
		}
		public IbContext ib() {
			return getRuleContext(IbContext.class,0);
		}
		public UnlContext unl() {
			return getRuleContext(UnlContext.class,0);
		}
		public TrdeContext trde() {
			return getRuleContext(TrdeContext.class,0);
		}
		public MathContext math() {
			return getRuleContext(MathContext.class,0);
		}
		public AceContext ace() {
			return getRuleContext(AceContext.class,0);
		}
		public SurveyContext survey() {
			return getRuleContext(SurveyContext.class,0);
		}
		public EofContext eof() {
			return getRuleContext(EofContext.class,0);
		}
		public InventoryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inventory; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterInventory(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitInventory(this);
		}
	}

	public final InventoryContext inventory() throws RecognitionException {
		InventoryContext _localctx = new InventoryContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_inventory);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			student();
			setState(97);
			nuid();
			setState(98);
			collegemajor();
			setState(99);
			ap();
			setState(100);
			ib();
			setState(101);
			unl();
			setState(102);
			trde();
			setState(103);
			math();
			setState(104);
			ace();
			setState(105);
			survey();
			setState(106);
			eof();
			 
				  for( int i = 0; i < rho.length; i++ ){
				       System.err.format( "%f,%f\n" , rho[i] * Math.cos( theta[ i ] ) , rho[i] * Math.sin( theta[i] ) );
				  }
				  System.err.format( "%f,%f\n" , rho[0] * Math.cos( theta[ 0 ] ) , rho[0] * Math.sin( theta[0] ) );
				  System.err.println();
			 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AceContext extends ParserRuleContext {
		public Ace_headContext ace_head;
		public TxtContext txt;
		public List<Ace_headContext> ace_head() {
			return getRuleContexts(Ace_headContext.class);
		}
		public Ace_headContext ace_head(int i) {
			return getRuleContext(Ace_headContext.class,i);
		}
		public List<TxtContext> txt() {
			return getRuleContexts(TxtContext.class);
		}
		public TxtContext txt(int i) {
			return getRuleContext(TxtContext.class,i);
		}
		public AceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ace; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterAce(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitAce(this);
		}
	}

	public final AceContext ace() throws RecognitionException {
		AceContext _localctx = new AceContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_ace);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(T__8);
			setState(111); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(110);
					match(T__9);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(113); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(115);
			matchWildcard();
			setState(117); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(116);
				match(T__9);
				}
				}
				setState(119); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__9 );
			setState(130);
			switch (_input.LA(1)) {
			case T__10:
				{
				setState(121);
				match(T__10);
				}
				break;
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
				{
				setState(126); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(122);
					((AceContext)_localctx).ace_head = ace_head();
					setState(123);
					((AceContext)_localctx).txt = txt();
					 System.out.println( (((AceContext)_localctx).ace_head!=null?_input.getText(((AceContext)_localctx).ace_head.start,((AceContext)_localctx).ace_head.stop):null) + "\n" + (((AceContext)_localctx).txt!=null?_input.getText(((AceContext)_localctx).txt.start,((AceContext)_localctx).txt.stop):null).trim() ); System.out.println(); 
					}
					}
					setState(128); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20))) != 0) );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			{
			setState(132);
			match(T__9);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ace_headContext extends ParserRuleContext {
		public Ace_headContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ace_head; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).enterAce_head(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InventoryListener ) ((InventoryListener)listener).exitAce_head(this);
		}
	}

	public final Ace_headContext ace_head() throws RecognitionException {
		Ace_headContext _localctx = new Ace_headContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_ace_head);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
